0.15.5:

0.15.4:
	New feature:
		- Number mode for dmenu. allows user to get index back instead of content.
		- Combi mode. Combine multiple views into one.
		- Highlight current window.
		- Highlight urgent and active row in window view.
		- DMenu allow rows to be highlighted. (single, multiple, ranges)
		- New color specification based on I3. (Can be enabled by settings) (#147)
		- /etc/hosts support for ssh mode. (#137)
	Bug fixes:
		- On a single item in list disable auto-select.
		- Fix cursor position (#140)
		- Resolving manpage. (#142)
		- Fix pasting cursor one off. (#150)
		- Fix grave key -> ctrl+grave (#151)
	Improvements:
		- Better handle input methods.. Now international keyboard layout works as expected: `e ->è
		- Be more verbose about starting in daemon mode.
		- Print a user-understandable error when launching in daemon mode without a key bound.
		- Add Ctrl(Shift)Tab to switch modi's.
		- Auto size number of columns based on available columns.
		- Better way to determine font height.
		- Fix font vertical centering.
		- One-off when pasting text.
		- Improve rendering of boxes (fixed height 	and margins)
		- Fix modi switcher boxes size+layout.
		- Reduce work on redraws (do not always calculate new size/position), set text, etc.
		- OO-ify the switchers.
		- Remove unneeded filtered array.
	Cleanup:
		- Do not lug argc,argv around everywhere.

0.15.2: 
	Removed features:
		- Remove (broken) hmode
		- Old style key binding and mode launcher.
		- Old TIMING code.
	New features:
		- Word movement in entry box. (#126)
		- PID file to avoid duplicate Rofi.
		- Generic keybinding and launching for modi. (#128)
		- Auto select mode (previously called zeltak mode) 
	Bug fixes:
		- Shift left/right movement between modi (#125)
		- Document updates (#123,#116,#124,etc.)
		- DMenu mode based on executable name with full path (#119)
		- Fix missing keystrokes.
		- On broken UTF-8 show everything up to the broken character. (#121)
	Others: