@@ -1,4 +1,6 @@
 0.15.5:
+	Bug fixes:
+		- Reduce time waiting for keyboard grab (#153)
 
 0.15.4:
 	New feature:
